{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Navigation",
            "id": "01f69215-bda1-4ae0-9f0d-870c30540127",
            "actions": [
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "25761928-a449-4da6-b69b-2d9aa2445210",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowResourceTab",
                    "type": "Button",
                    "id": "0fc3b198-fd49-4741-aa39-44788e74f7f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fdb90621-b427-40fb-8bc0-a1cfcd947ca1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4b9a1c0-40a3-4514-b421-b6da0741b22f",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowResourceTab",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}